add install target

--- a/wacom_flash/Makefile
+++ b/wacom_flash/Makefile
@@ -11,3 +11,7 @@ $(PROGNAME): $(WACOMTOOLSRC)
 
 clean:
 	rm -f $(WACOMTOOLOBJ) $(PROGNAME)
+
+install:
+	install -d /usr/bin/
+	install -m 755 wacom_flash /usr/bin/
